--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -705,7 +705,7 @@ EXCLUDE_SYMBOLS        =
 # directories that contain example code fragments that are included (see 
 # the \include command).
 
-EXAMPLE_PATH           = @top_srcdir@/example @top_srcdir@
+EXAMPLE_PATH           = @top_srcdir@/examples @top_srcdir@
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the 
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
