--- a/trunk/tools/Makefile.am
+++ b/trunk/tools/Makefile.am
@@ -7,6 +7,8 @@ bin_PROGRAMS   = abus-send @ABUS_CGI@
 
 man_MANS = abus-send.1
 
+EXTRA_DIST   = $(man_MANS)
+
 EXTRA_PROGRAMS   = abus-cgi
 
 abus_send_SOURCES  = abus-send.c
