--- a/trunk/abus/Makefile.am
+++ b/trunk/abus/Makefile.am
@@ -2,6 +2,8 @@ lib_LTLIBRARIES = libabus.la
 
 INC = -I$(top_srcdir)/abus/hashtab -I$(top_srcdir)/abus/libjson -I$(top_srcdir)/abus
 
+abusincludedir=$(includedir)/abus
+
 AM_CPPFLAGS = $(INC)
 AM_CFLAGS = -Wall
 AM_CXXFLAGS = $(AM_CFLAGS)
@@ -11,7 +13,7 @@ libabus_la_LDFLAGS = $(WINLDFLAGS) $(OSXLDFLAGS) -no-undefined -version-info 0:0
 libabus_la_CFLAGS = $(AM_CFLAGS)
 libabus_la_LIBADD = libjson/libjson.la hashtab/libhashtab.la -lrt
 
-nobase_include_HEADERS = abus.h jsonrpc.h abus.hpp
+abusinclude_HEADERS = abus.h jsonrpc.h abus.hpp
 
 SUBDIRS = hashtab libjson
 
