--- a/trunk/abus/hashtab/Makefile.am
+++ b/trunk/abus/hashtab/Makefile.am
@@ -1,10 +1,12 @@
 
+abusincludedir=$(includedir)/abus
+
 noinst_LTLIBRARIES = libhashtab.la
 
 libhashtab_la_SOURCES = hashtab.c recycle.c lookupa.c recycle.h lookupa.h
 libhashtab_la_LIBADD = 
 
-nobase_include_HEADERS = standard.h hashtab.h
+abusinclude_HEADERS = standard.h hashtab.h
 
 EXTRA_DIST = README.hashtab
 
