--- a/trunk/abus/libjson/Makefile.am
+++ b/trunk/abus/libjson/Makefile.am
@@ -1,9 +1,11 @@
 
+abusincludedir=$(includedir)/abus
+
 noinst_LTLIBRARIES = libjson.la
 
 libjson_la_SOURCES = json.c
 
-nobase_include_HEADERS = json.h
+abusinclude_HEADERS = json.h
 
 EXTRA_PROGRAMS = jsonlint
 
