fix ressource leak factorize json_strerror() code cleanup add clean example example-json-config some size_t'ification factorize json_config_get_direct_*, check for type let json_config_lookup() return NULL if item not found allow directory to be "", i.e. the root repair build of jsonlint broken by r71 fix json_config_get_direct_bool() prototype add json_config_get_direct_strp() deduplicate doxydoc

--- a/abus/Makefile.am
+++ b/abus/Makefile.am
@@ -17,3 +17,7 @@ abusinclude_HEADERS = abus.h jsonrpc.h abus.hpp
 
 SUBDIRS = hashtab libjson
 
+cppcheck:
+	cppcheck -q -I $(top_builddir) $(INC) $(top_srcdir)/abus/
+
+.PHONY: cppcheck
