API change: opacification of abus_t and json_rpc_t.
This new version 0.3, lib ABI 1, introduces opacification of abus_t and json_rpc_t.
Those can not be auto/statically allocated anymore, they are now dynamically allocated
by the library. Therefore, the changed prototypes are abus_init(), 
abus_request_method_init()/abus_request_event_init().
The new abus_init() gained the ability to apply an abus_conf_t from startup.

configure: enabling test implies building examples (for compilability)

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,4 +17,9 @@ doc:
 examples:
 	make -C examples examples
 
-.PHONY: doc examples
+INC = -I$(top_srcdir)/abus/hashtab -I$(top_srcdir)/abus/libjson -I$(top_srcdir)/abus
+
+cppcheck:
+	cppcheck --enable=all -q -I $(top_builddir) $(INC) $(top_srcdir)/{abus,tools,examples}
+
+.PHONY: doc examples cppcheck
