--- a/abus/hashtab/Makefile.am
+++ b/abus/hashtab/Makefile.am
@@ -6,7 +6,7 @@ noinst_LTLIBRARIES = libhashtab.la
 libhashtab_la_SOURCES = hashtab.c recycle.c lookupa.c recycle.h lookupa.h
 libhashtab_la_LIBADD = 
 
-abusinclude_HEADERS = standard.h hashtab.h
+noinst_HEADERS = standard.h hashtab.h
 
 EXTRA_DIST = README.hashtab
 
