--- a/trunk/abus/Makefile.am
+++ b/trunk/abus/Makefile.am
@@ -9,15 +9,12 @@ AM_CFLAGS = -Wall
 AM_CXXFLAGS = $(AM_CFLAGS)
 
 libabus_la_SOURCES = jsonrpc.c abus.c sock_un.c sock_un.h
-libabus_la_LDFLAGS = $(WINLDFLAGS) $(OSXLDFLAGS) -no-undefined -version-info 0:0:0
+libabus_la_LDFLAGS = -no-undefined -version-info 1:0:0
 libabus_la_CFLAGS = $(AM_CFLAGS)
 libabus_la_LIBADD = libjson/libjson.la hashtab/libhashtab.la -lrt $(PTHREAD_LIBS)
 
 abusinclude_HEADERS = abus.h jsonrpc.h abus.hpp
+noinst_HEADERS = abus_internal.h jsonrpc_internal.h
 
 SUBDIRS = hashtab libjson
 
-cppcheck:
-	cppcheck -q -I $(top_builddir) $(INC) $(top_srcdir)/abus/
-
-.PHONY: cppcheck
